lang.java.statics.test/tests/positive/interfaces/implementsimpleinterface.yes.javtest
STATIX ok
JAVAC  ok

[I]
interface I {
  public void m();
}

[A]
class A implements I {
  public void m() {};
}
