lang.java.statics.test/tests/negative/interfaces/implementssimpleinterface.no.javtest
STATIX fail java\.interfaces\.cls-implements-sig
JAVAC  fail A is not abstract and does not override abstract method m\(\) in I

[I]
interface I {
  public void m();
}

[A]
class A implements I {
}
